v0.0.7.21 (2011-05-24)
==================
  New features:
	-- Adaptive JPEG mode (bandwidth constrained)


v0.0.7.16 (2010-08-25)
==================
Lots of new features and options.
	-- Password file support
	-- Ability to disable pulseaudio and clipboard code
	-- Better OSX/win32 support
	-- JPEG compression
	-- Lots of small fixes


v0.0.6 (2009-03-22)
===================

Xpra:
  New features:
    -- Clipboard sharing (with full X semantics).
    -- Icon support.
    -- Support for raw TCP sockets. Insecure if you don't know what
       you are doing.

  Bug fixes:
    -- Xvfb doesn't support mouse wheels, so they still don't work in
       xpra. But now xpra doesn't crash if you try.
    -- Running FSF Emacs under xpra no longer creates an infinite loop.
    -- The directory that xpra was launched from is now correctly
       saved in ~/.xpra/run-xpra.
    -- Work around PyGtk weirdness that caused the server and client
       to sometimes ignore control-C.
    -- The client correctly notices keyboard layout changes.
    -- The client no longer crashes on keymaps in which unnamed keys
       are bound to modifiers.
    -- Workarounds are included for several buggy versions of Pyrex.

Wimpiggy:
  -- Assume that EWMH-style icons have non-premultiplied alpha.

Other:
  -- Add copyright comments to all source files.

v0.0.5 (2008-11-02)
===================

This release primarily contains cleanups and bugfixes for xpra.

General:
  -- Logging cleanup -- all logging now goes through the Python
     logging framework instead of using raw 'prints'.  By default
     debug logging is suppressed, but can be enabled in a fine- or
     coarse-grained way.

Xpra:
  -- Protocol changes; v0.0.5 clients can only be used with v0.0.5
     servers, and vice-versa.  Use 'xpra upgrade' to upgrade old
     servers without losing your session state.
  -- Man page now included.
  Important bug fixes:
  -- Qt apps formerly could not receive keyboard input due to a focus